pDLNA CHANGELOG
(c) 2010-2013 Stefan Heumader
email: stefan@heumader.at
webpage: http://www.pdlna.org

Licened under GPLv3 (see LICENSE file)

-----------------------------------------

Version 0.64.3
xx-xx-201x

- modified WebUI to open Changelog link in a new browser tab/window
- improved regular expression to determine valid FFmpeg installations (thanks to marc)

Version 0.64.2
09-12-2013

- modified domain from pdlna.com to pdlna.org
- fixed issue #24 (https://github.com/geuma/pDLNA/issues/24) -aka- directory listings not working, when data fields not set

Version 0.64.1
25-11-2013

- fixed issue #23 (https://github.com/geuma/pDLNA/issues/23) -aka- removed using old dependency Movie::Info from PDLNA::Media

Version 0.64.0
03-11-2013

- moved from Movie::Info to using FFmpeg natively to determine media information (based on the idea of lombao)
- using FFmpeg instead of Mplayer to create VideoThumbnails
- using FFmpeg instead of Mplayer to gather media streams
- added default values for FILEINFO database and increased PROGRAM_DBVERSION
- indexing files is now about 4 to 5 times faster (by disabling AutoCommit)
- storing media information is now 0.5 times faster (by disabling AutoCommit)
- added support for MySQL
- added amount of directories to WebUI
- added $VERSION, $HOSTNAME and $OS variables to the FriendlyName configuration
- fixed issue #21 (https://github.com/geuma/pDLNA/issues/21) -aka- special characters in filenames break some regular expressions (under some circumstances)
- improved handling of ExcludedItems configuration parameter
- directories with no subdirectories or subfiles will be deleted from ContentLibrary
- Length of all Media Items in WebUI will only be shown when LowResourceMode is disabled
- added FFmpeg information to WebUI to provide easier access to Transcoding possibilities

Version 0.63.0
08-07-2013

- removed Devel::Size Perl module from dependencies